# autoresearch-converter

./: .gitignore  LICENSE  README.md  generate_sample_data.py  prepare.py  program.md  pyproject.toml  train.py
