[project]
name = "autoresearch-converter"
version = "0.1.0"
description = "AI agent autonomous research framework for converter EMT surrogate models"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "torch>=2.1.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
